package usantatecla.mastermind.views;

import usantatecla.mastermind.controllers.UseCaseController;

public abstract class View {

	public abstract void interact(UseCaseController controller);

}
